[package]
name = "wasm_bindgen_helloworld"
version = "0.1.0"
authors = ["Daniel Whitney <dwhitney@spellmanhv.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.58"
